answers drawed to page, now need id for answers

--- a/index.html
+++ b/index.html
@@ -36,11 +36,16 @@
           </div>
         </div> -->
       </div>
+      <div class="row">
+        <div class="col-12 d-flex justify-content-center m-3">
+          <button class="btn btn-primary selectable" onclick="">Submit</button>
+        </div>
+      </div>
     </div>
   </main>
   <footer class="bg-dark text-light">
     <div class="text-center no-select">
-      <p><small> 💖</small></p>
+      <p><small>This is SPARTA</small></p>
     </div>
   </footer>
 
